[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/Projectiles/Veget/attv03/atv301.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Projectiles/Veget/attv03/atv302.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Projectiles/Veget/attv03/atv303.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Projectiles/Veget/attv03/atv304.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Projectiles/Veget/attv03/atv305.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Projectiles/Veget/attv03/atv306.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Projectiles/Veget/attv03/atv307.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Projectiles/Veget/attv03/atv308.png" type="Texture" id=8]
[ext_resource path="res://Scripts/Projectiles/Characters/protveg3.gd" type="Script" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 16.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 8.14915

[node name="protveg3" type="AnimatedSprite"]
frames = SubResource( 1 )
frame = 1
playing = true
script = ExtResource( 9 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="Position2D" type="Position2D" parent="."]
[connection signal="animation_finished" from="." to="." method="_on_protveg3_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
